improve connection test coverage